# atomgl

./: 5in65_acep_7c_display_driver.c  CMakeLists.txt  Kconfig  README.Md  acep_5in65_7c.c  backlight_gpio.c  backlight_gpio.h  display_common.c  display_common.h  display_driver.c  display_driver.h  display_items.h  draw_common.h  font.c  ili934x_display_driver.c  ili948x_display_driver.c  image_helpers.c  image_helpers.h  memory_display_driver.c  message_helpers.h  miniz.c  miniz.h  miniz.h.license  monochrome.h  spi_display.c  spi_display.h  spng.c.license  spng.h  spng.h.license  ssd1306_display_driver.c  st7789_display_driver.c
.github/workflows/: esp32-build.yaml
LICENSES/: BSD-2-Clause.txt
docs/: display-drivers.md  primitives.md
include/: display_driver.h
sdl_display/: CMakeLists.txt  README.Md  display.c  font.c  test_display.erl  ufontlib.c  ufontlib.h
